[package]
name = "mouse_macro_recorder"
version = "0.1.0"
edition = "2021"
description = "A simple Windows mouse macro recorder and playback tool built with Rust"
authors = ["Grok"]

[dependencies]
eframe = "0.29"
egui = "0.29"
rdev = "0.5"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true