[package]
name = "safecrypt"
version = "1.0.0"
edition = "2021"
description = "Production-grade reliable file encryption CLI"
authors = ["Grok"]
license = "MIT"
readme = "README.md"

[dependencies]
clap = { version = "=4.4.18", features = ["derive"] }
argon2 = "=0.5.2"
chacha20poly1305 = "=0.10.1"
rand = "=0.8.5"
zeroize = "=1.6.0"
rpassword = "=7.3.1"
anyhow = "=1.0.86"
thiserror = "=1.0.61"
hex = "=0.4.3"
indicatif = "=0.17.8"
console = "=0.15.8"
base64ct = "=1.6.0"
password-hash = "=0.5.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
